Week5/istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: my-namespace
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  namespace: my-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: api
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
          - |
            while true; do
              echo -e "HTTP/1.1 200 OK\r\n\r\nPod: $(hostname)" | nc -l -p 8080;
            done
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: my-namespace
spec:
  selector:
    app: api-app
  ports:
  - port: 80
    targetPort: 8080
